--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+:root {
+  --main-link-color: #45b482;
+}
+
 body {
   background: linear-gradient(
     135deg,
@@ -5,40 +9,58 @@ body {
     rgb(252, 255, 0) 100%
   );
   background-repeat: repeat;
-  margin-top: 60px;
+  margin: 30px 20px;
   max-width: 800px;
 }
 
 h1 {
   font-size: 48px;
   text-align: center;
+  color: #f56212fe;
 }
 
 .main-link {
   display: flex;
-  justify-content: space-evenly;
-  margin: 40px;
+  justify-content: center;
+  padding: 5px;
   border: 3px solid rgb(252, 255, 0);
   border-radius: 5px;
+  margin-top: 20px;
+}
+
+.main-link a {
+  margin: 15px 20px;
+  text-decoration: none;
+  font-size: 20px;
+  color: var(--main-link-color);
 }
 
 .text-1 {
-  display: flex;
-  justify-content: center;
-  padding: 20px 0;
-  margin: 10px 0;
-  text-align: left;
+  display: block;
+  margin: 20px;
+  padding: 20px 3px;
+  text-align: center;
 }
 
-.text-2 {
-}
 .link {
   display: block;
   margin: 0 auto;
   padding: auto;
+  text-align: center;
   text-decoration: none;
+  color: var(--main-link-color);
+}
+
+.photo-croissant {
+  display: block;
+  margin: auto;
+  box-shadow: 0 10px rgb(252, 255, 0);
+  border-radius: 30px 60px;
 }
 
 .link-contact {
   text-decoration: none;
+  text-align: center;
+  margin: 7px;
+  color: var(--main-link-color);
 }
