--- a/src/styles.css
+++ b/src/styles.css
@@ -9,8 +9,9 @@ body {
     rgb(252, 255, 0) 100%
   );
   background-repeat: repeat;
-  margin: 30px 20px;
   max-width: 800px;
+  margin: 60px auto;
+  font-family: "Roboto", sans-serif;
 }
 
 h1 {
@@ -40,6 +41,7 @@ h1 {
   margin: 20px;
   padding: 20px 3px;
   text-align: center;
+  line-height: 30px;
 }
 
 .link {
